<resources>
    <string name="app_name">NETFLEX</string>
    <string name="str_first_title">Unlimited movies, TV shows, and more</string>
    <string name="str_signin">Sign In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_username">User Name</string>
    <string name="str_password">Password</string>
    <string name="new_to_netflix">New to Netflix?</string>
    <string name="confirm_password">Verify Password</string>
    <string name="full_name">Full Name</string>
    <string name="avatar">avatar</string>
    <string name="have_account_already">Already have an account?</string>
    <string name="admin_user">Admin User</string>
    <string name="normal_user">Normal User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="promoted">Promoted</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description">description</string>
    <string name="movie_name">Movie Name</string>
    <string name="category">Category</string>
    <string name="video_file_name">Video File Name(Input number (1~4))</string>
    <string name="search">Search</string>
    <string name="sign_up_now">Sign up now.</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="id_number">ID Number</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="sign_up_as_admin">Sign up as Admin</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="duration_minutes">Duration (minutes)</string>
    <string name="rating">Rating</string>
    <string name="search_results">Search Results</string>
    <string name="image_background">Image Background</string>
    <string name="play">Play</string>
</resources>