<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvCategoryPromoted"
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:layout_height="wrap_content"
        android:text="@string/promoted" />

    <ImageView
        android:id="@+id/imgEditCategory"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/edit" />

    <ImageView
        android:id="@+id/imgDeleteCategory"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/delete" />
</TableRow>
