<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="50dp">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_signup"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textSize="34sp" />
            <EditText
                android:id="@+id/txtSignUpUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/str_username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/grey" />
            <EditText
                android:id="@+id/txtIDNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/id_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="@color/grey" />
            <EditText
                android:id="@+id/txtSignUpFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/txtSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/txtSignUpPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/grey" />
            <EditText
                android:id="@+id/txtSignUpPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone_number_optional"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="@color/grey" />

            <ImageButton
                android:id="@+id/imageAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/avatar"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:layout_gravity="center"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <CheckBox
                android:id="@+id/switchIsAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:minHeight="48dp"
                android:text="@string/sign_up_as_admin"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSignUpOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/str_signup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/have_account_already" />
                <TextView
                    android:id="@+id/btnSignInFromSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/sign_in_now" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>