<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/ivMovieBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/image_background">
    </ImageView>

    <LinearLayout
        android:id="@+id/layoutMovieItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMovieCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:text="@string/category" />
        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textAlignment="viewEnd"
            android:text="@string/description" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/imgEditMovie"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_baseline_edit_24" />

            <ImageView
                android:id="@+id/imgDeleteMovie"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_baseline_delete_24" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
