<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <ImageView
        android:id="@+id/ivMovieBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/image_background">
    </ImageView>

    <LinearLayout
        android:id="@+id/itemMovieView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/tvMovieItemName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMovieItemCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/category" />
        <TextView
            android:id="@+id/tvMovieItemDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/description" />
    </LinearLayout>
</FrameLayout>