<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <!-- res/layout/activity_main.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/ivMovieBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/background"
                android:contentDescription="@string/image_background">
            </ImageView>

            <LinearLayout
                android:id="@+id/itemMovieView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:id="@+id/tvMovieItemName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/name"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMovieItemCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/category" />
                <TextView
                    android:id="@+id/tvMovieItemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/description" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/imgMoviePlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_play_circle_24"
                    android:contentDescription="@string/play" />
            </LinearLayout>
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieCategoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:layout_weight="2"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/side_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/side_menu" />


</androidx.drawerlayout.widget.DrawerLayout>