<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <ImageView
        android:id="@+id/ivMovieBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/image_background"/>
    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvMovieCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/category"
        android:textSize="16sp"
        android:minHeight="36dp" />

    <TextView
        android:id="@+id/tvMovieDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:minHeight="36dp" />

    <TextView
        android:id="@+id/tvMovieFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvMovieDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvMovieRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imgMoviePlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_play_circle_24"
        android:contentDescription="@string/play" />

</LinearLayout>
